# habsentminded

./: Huffman.hs  README.md  Resources.hs  habsentminded.cfg  habsentminded.hs  run.bat  run_Bt.bat
habsentmindedBt/: README.md  habsentminded.cfg  habsentmindedBt.cabal  run_Bt.bat  stack.yaml
habsentmindedBt/src/: Main.hs
habsentmindedBtDD/: LICENSE  README.md  habsentminded.cfg  habsentmindedBtDD.cabal  run_Bt&DD.bat  stack.yaml
habsentmindedBtDD/src/: Main.hs
